fixing mobile responsiveness on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
     color: rgb(218, 231, 242);
     border: none;
 
-    line-height: 1.5;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -90,7 +89,7 @@
 
 /* commiting sudoku */
 .sudoku-board{
-    width: 85vh;
+    width: 80vh;
     height: 80vh;
 
     align-self: center;
@@ -114,30 +113,24 @@
     height: 100%;
 
     display: grid;
-
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 
     outline: 3px solid rgb(132, 158, 162);
-
     border-radius: 4px;
 }
 span{
     font-family: 'Roboto Mono', monospace;
 
-    height:100%;
     width: 100%;
+    display: flex;
+    height: 100%;
 
-    line-height: normal;
-
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 500;
 
-    text-align: center;
-    text-justify: center;
-    align-self: center;
-    justify-self: center;
-
+    align-items: center;
+    justify-content:center;
     color: #dde9f0;
 
     border: 1px solid rgb(72, 96, 95);
@@ -231,6 +224,12 @@ span{
 img{
     filter: contrast(50%);
 }
+@media screen and (max-width: 1440px){
+    span{
+        font-size: 34px;
+    }
+}
+
 @media screen and (max-width: 1080px){
     .nav h1{
         font-size: 40px;
@@ -240,24 +239,23 @@ img{
     }
 
     span{
-        font-size: 30px;
-        font-weight: 600;
+        font-size: 32px;
     }
     .sudoku-board{
-        width: 400px;
-        height: 400px;
+        width: 80vh;
+        height: 80vh;
     }
 }
 
 @media screen and (max-width: 768px){
     .nav h1{
-        font-size: 30px;
+        font-size: 26px;
     }
     .nav span{
         font-size: 30px;
     }
     span{
-        font-size: 30px;
+        font-size: 32px;
         font-weight: 500;
     }
 
@@ -279,22 +277,25 @@ img{
         grid-template-columns: 1fr;
     }
     .main-container{
+        max-height: 95vh;
         width: 100%;
+        grid-column: 1;
+        grid-row: 1;
     }
     .nav h1{
-        font-size: 22px;
+        font-size: 18px;
     }
     .nav span{
         font-size: 22px;
     }
 
     span{
-        font-size: 18px;
+        font-size: 24px;
     }
 
     .sudoku-board{
-        width: 250px;
-        height: 250px;
+        width: 80vw;
+        height: 80vw;
     }
 
     .right-side{
